css修正 スマホのview修正

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,7 @@ canvas
 input[type="text"]
 {
     padding: 0 4px 0 12px;
-    width: 30.5em;
+    width: 80%;
     background-color: white;
     border: 1px solid #000000;
     border-radius: 4px;
